--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="card-content" id="content1">
           <div class="dropdowns">
-            <span>#1</span>
+            <span style="margin-top: 6%;">#1</span>
             <div class="sizes">
               <label for="size1">Size:</label>
               <select id="size1">
@@ -70,10 +70,14 @@
       <div class="card popular" onclick="toggleCard(2)">
         <div class="card-header">
           <div class="popular-badge">MOST POPULAR</div>
-          <div class="title">
+          <div class="left-section">
             <input type="radio" name="unit" id="unit2" />
-            <label for="unit2">2 Unit</label>
-            <span class="badge">20% Off</span>
+            <div class="text-content">
+              <div class="top-row">
+                <label for="unit2">2 Unit</label>
+                <span class="badge">20% Off</span>
+              </div>
+            </div>
           </div>
           <div class="pricing">
             <span class="discounted-price">$18.00 USD</span>
@@ -82,7 +86,7 @@
         </div>
         <div class="card-content" id="content2">
           <div class="dropdowns">
-            <span>#1</span>
+            <span style="margin-top: 6%;">#1</span>
             <div class="sizes">
               <label for="size1">Size:</label>
               <select id="size1">
@@ -122,11 +126,15 @@
 
       <div class="card" onclick="toggleCard(3)">
         <div class="card-header">
-          <div class="title">
-            <input type="radio" name="unit" id="unit3" />
-            <label for="unit3">3 Unit</label>
-            <span class="badge">30% Off</span>
-          </div>
+            <div class="left-section">
+                <input type="radio" name="unit" id="unit3" />
+                <div class="text-content">
+                  <div class="top-row">
+                    <label for="unit3">3 Unit</label>
+                    <span class="badge">30% Off</span>
+                  </div>
+                </div>
+              </div>
           <div class="pricing">
             <span class="discounted-price">$24.00 USD</span>
             <span class="original-price">$36.00 USD</span>
@@ -134,7 +142,7 @@
         </div>
         <div class="card-content" id="content3">
           <div class="dropdowns">
-            <span>#1</span>
+            <span style="margin-top: 6%;">#1</span>
             <div class="sizes">
               <label for="size1">Size:</label>
               <select id="size1">
